k8s/applications/automation/zigbee2mqtt/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: haos
  namespace: zigbee2mqtt
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - "haos.pc-tips.se"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zigbee2mqtt
          namespace: zigbee2mqtt
          port: 8080
